--- a/karl/views/static/ux2/css/karl/chrome.less
+++ b/karl/views/static/ux2/css/karl/chrome.less
@@ -31,13 +31,13 @@ form#chatter-post-form button.searchButton {
     background: #333;
     border-bottom: @white;
     height: auto;
-    min-width: 1220px;
+    min-width: @fixedSiteWidth;
     zoom: 1;
     font-size: 1.25em;
     .gradientBar(#444, #222);
     .clearfix();
     .container {
-        width: 1200px;
+        width: @fixedSiteWidth;
         margin: auto;
     }
     h1.selected {
