--- a/karl/views/static/ux2/css/karl/footer.less
+++ b/karl/views/static/ux2/css/karl/footer.less
@@ -1,8 +1,8 @@
 #footer {
-    min-width: 1220px;
+    min-width: @fixedSiteWidth;
     padding: 1.33em 0;
     .container {
-        width: 1190px;
+        width: 900px;
         margin: auto;
         padding: 0 15px;
         a {
