--- a/karl/views/static/ux2/css/karl/pushdowns.less
+++ b/karl/views/static/ux2/css/karl/pushdowns.less
@@ -33,7 +33,7 @@
     cursor: pointer;
 }
 .pushdownContent {
-    width: 1200px;
+    width: @fixedSiteWidth;
     margin: auto;
     a {
         color: @baseFontColor;
