--- a/karl/views/static/ux2/plugins/qunit.html
+++ b/karl/views/static/ux2/plugins/qunit.html
@@ -4,9 +4,9 @@
   <h1>QUnit tests for popper</h1>
   <ul>
     <li><a href="./popper-example/tests/test.html">popper-example</a></li>
-    <li>popper-livesearch (missing)</li>
     <li><a href="./popper-tagbox/tests/test.html">popper-tagbox</a></li>
     <li><a href="./popper-pushdown/tests/test.html">popper-pushdown</a></li>
+    <li><a href="./karl-searchbox/tests/test.html">karl-searchbox</a></li>
   </ul>
   <h3>tinymce plugins</h1>
   <ul>
