--- a/karl/views/static/ux2/css/main.less
+++ b/karl/views/static/ux2/css/main.less
@@ -77,5 +77,6 @@
 @import "../plugins/popper-gridbox/popper.gridbox.less";
 @import "../plugins/karl-multifileupload/multifileupload.less";
 @import "../plugins/karl-datetimepicker/datetimepicker.less";
+@import "../plugins/karl-searchbox/karl.searchbox.less";
 // Legacy ux1
 @import "karl/legacy.less";
