--- a/karl/views/static/ux2/plugins/karl-searchbox/karl.searchbox.less
+++ b/karl/views/static/ux2/plugins/karl-searchbox/karl.searchbox.less
@@ -9,5 +9,13 @@
         float: right;
     }
 
+
+    // for some reason, this is 10px shorter then needed,
+    // to play nice with the bootstrap grid system.
+    // Just fix this locally, as the global change may do harm.
+    .pushdownContent {
+        width: 960px;
+    }
+
 }
 
