Also fix the Polling button on Feeds, in IE8, when its state is off. (It appeared to be empty.)

--- a/karl/views/static/ux2/css/elements/contentfeeds.less
+++ b/karl/views/static/ux2/css/elements/contentfeeds.less
@@ -180,6 +180,7 @@
     //border: 1px solid #b4b4b4;
     color: #333333;
     font-weight: normal;
+    width: 14px; // XXX Needed on IE8, irrelevant on all other browsers
   }
 }
 #feed-polling {
