Added left-right chevrons to the options toggle button

--- a/karl/views/static/ux2/plugins/popper-gridbox/karl.wikitoc.less
+++ b/karl/views/static/ux2/plugins/popper-gridbox/karl.wikitoc.less
@@ -150,6 +150,11 @@
     .karl-wikitoc-button-inspector {
         float: right;
         margin: 4px;
+        line-height: 15px;
+        & i {
+            margin-right: 2px;
+            margin-top: 0px;
+        }
     }
 
 }
