--- a/karl/views/static/ux2/plugins/popper-gridbox/karl.wikitoc.less
+++ b/karl/views/static/ux2/plugins/popper-gridbox/karl.wikitoc.less
@@ -50,6 +50,7 @@
                 padding: 0 2px;
                 margin: 0 0 0 11px; 
                 width: auto;
+                border-style: none none none;
             }
 
             > div {
