--- a/karl/views/static/ux2/plugins/karl-datetimepicker/datetimepicker.less
+++ b/karl/views/static/ux2/plugins/karl-datetimepicker/datetimepicker.less
@@ -14,3 +14,22 @@
     background-color: white;
 }
 
+.ui-karldatetimepicker-container {
+    .all_day {
+        input {
+            margin:  0;
+        }
+        // The label of the all day checkbox
+        // should not be like "all other labels"
+        // in the form fields.
+        label {
+            margin: 0 0 0 4px;
+            display: inline-block;
+            color: @textColor;
+            .control-group.required &:after {
+                display: none;
+            }
+        }
+    }
+}
+
