fix css conflict that caused ref manual add buttons to disappear

--- a/karl/views/static/ux2/css/karl/actions.less
+++ b/karl/views/static/ux2/css/karl/actions.less
@@ -12,6 +12,7 @@ ul.actionsMenu {
     > li {
         float: left;
         margin-right: 1px;
+        font-size: 1em;
     }
     > li > a {
         color: @grayDark;
