--- a/karl/views/static/ux2/css/main.css
+++ b/karl/views/static/ux2/css/main.css
@@ -1098,7 +1098,7 @@ form.addTag button{position:absolute;top:0;right:0;line-height:1.5em;padding:.2e
 .portlet .portlet-buttons{margin-top:1em;}.portlet .portlet-buttons a{color:#000000;}
 .sectionRelated{text-shadow:none;}
 #my-communities-list a.btn,#blog-archive a.btn{color:#000000;}
-.portlet-list{padding:0;margin:0;list-style:none;}
+.portlet-list{padding:0;margin:0;list-style:none;word-wrap:break-word;}
 .portlet-item{padding:0 0 5px 0;margin:0 0 5px 0;border-bottom:1px dotted #555555;}.portlet-item .footer-line{color:#555555;font-size:0.8em;font-style:italic;}
 .portlet-item:nth-last-of-type(-n+1){border-bottom:none;}
 .tag-list-item .btn,.tag-list-item .btn:hover{color:#000000;margin-bottom:0.25em;}
