fix recent activity table layout in my profile pushdown

--- a/karl/ux2/microtemplates/myprofile.mustache
+++ b/karl/ux2/microtemplates/myprofile.mustache
@@ -26,15 +26,15 @@
                 </table>
 
 
-                <table class="content-listing">
+                <table class="content-listing fixed-layout">
                 {{#contexts}}
                     <tr>
-                    <td>
+                    <td class="recent-activity-time">
                         <a href="{{url}}">
                             <div class="timeago myprofile-timeago" title="{{modified}}">{{modified}}</div>
                         </a>
                     </td>
-                    <td>
+                    <td class="recent-activity-title">
                         <a href="{{url}}">
                             <h4 class="pushDownList-title">{{title}}</h4>
                             <div class="pushDownList-info">
