--- a/karl/views/static/ux2/css/karl/pushdowns.less
+++ b/karl/views/static/ux2/css/karl/pushdowns.less
@@ -170,3 +170,14 @@
     display: none;
     .smaller();
 }
+table.fixed-layout{
+    table-layout:fixed;
+}
+td.recent-activity-time{
+    width:25%;
+}
+td.recent-activity-title{
+    width:75%;
+    word-wrap:break-word;
+}
+
