--- a/karl/views/static/ux2/plugins/karl-searchbox/karl.searchbox.less
+++ b/karl/views/static/ux2/plugins/karl-searchbox/karl.searchbox.less
@@ -3,12 +3,11 @@
 
 .searchbox-pushdown-panel {
 
-    .close-searchbox {
+    .sb-close {
         font-weight: bold;
         color: red;
         float: right;
     }
-
 
     // for some reason, this is 10px shorter then needed,
     // to play nice with the bootstrap grid system.
