Implement search parameters, up till the server view (they are not really used in the catalog search, yet.)

--- a/karl/ux2/microtemplates/searchbox.mustache
+++ b/karl/ux2/microtemplates/searchbox.mustache
@@ -7,7 +7,7 @@
                 Search in:
                 <select name="sb_scope" class="span2">
                     {{#scopeOptions}}
-                    <option value="{{name}}" {{#selected}}selected{{/selected}}>{{label}}</option>
+                    <option value="{{path}}" {{#selected}}selected{{/selected}}>{{label}}</option>
                     {{/scopeOptions}}
                 </select>
             </label>
