fix layout for intranet home page

--- a/karl/views/static/ux2/css/karl/intranet.less
+++ b/karl/views/static/ux2/css/karl/intranet.less
@@ -1,6 +1,14 @@
 div.center_intranet {
     width: 65%;
 }
+div.intranethome-center {
+    float: left;
+    width: 48%;
+}
+div.intranethome-right {
+    float: right;
+    width: 48%;
+}
 #main {
     #left {
         display: inline;
