fix wrapping problem with my profile pushdown

--- a/karl/ux2/microtemplates/myprofile.mustache
+++ b/karl/ux2/microtemplates/myprofile.mustache
@@ -1,7 +1,5 @@
 <div id="radar-panel">
-    <div class="pushdownContent clearfix">
-
-        <div class="radarsection clearfix" data-radarsection="home">
+    <div class="pushdownContent myprofileContent clearfix">
 
             {{#panels}}
             <div class="panel {{class}}">
@@ -84,9 +82,6 @@
             </p>
 
             </div>
-
-        </div>
-
 
     </div>
 </div>
