--- a/karl/views/static/ux2/css/main.css
+++ b/karl/views/static/ux2/css/main.css
@@ -1061,18 +1061,14 @@ li[data-quickpanel='quickpanel'],div[data-quickpanel='quickpanel']{position:rela
 .nav-tabs .dropdown-menu,.nav-pills .dropdown-menu{margin-top:1px;border-width:1px;}
 .nav-pills .dropdown-menu{-webkit-border-radius:4px;-moz-border-radius:4px;border-radius:4px;}
 .tagbox{margin:0 0 2em 0;width:auto;}.tagbox ul{float:none;clear:both;list-style:none;float:left;margin:0;padding:0;line-height:1.5em;}.tagbox ul>li{display:inline;}.tagbox ul>li>a{display:inline-block;}
-.tagbox ul li{line-height:2em;position:relative;float:left;white-space:nowrap;margin-bottom:.2em;margin-right:0.85em;}
-a.tag,a.item,a.tagCounter{float:left;margin-right:0;}
-a.tag,a.item{position:relative;z-index:2;background:#eeeeee;border-width:1px;border-style:solid;border-color:#c8c8c8 #c8c8c8 #a2a2a2 #c8c8c8;padding:.05em .5em;color:#000000;}
+.tagbox ul li{line-height:18px;position:relative;float:left;white-space:nowrap;margin-bottom:.2em;margin-right:0.85em;margin-top:4px;}
+a.tag,a.item,a.tagCounter{margin-left:5px}
+li.tag a {color:#000000}
+li.tag,a.tag,a.item{position:relative;z-index:2;background:#eeeeee;border-width:1px;border-style:solid;border-color:#000000;padding:.05em .5em;color:#000000;}
 a.item{-webkit-border-radius:0.3em 0.3em 0.3em 0.3em;-moz-border-radius:0.3em 0.3em 0.3em 0.3em;border-radius:0.3em 0.3em 0.3em 0.3em;-webkit-background-clip:padding-box;-moz-background-clip:padding-box;background-clip:padding-box;}
-a.tag{-webkit-border-radius:0.3em 0 0 0.3em;-moz-border-radius:0.3em 0 0 0.3em;border-radius:0.3em 0 0 0.3em;-webkit-background-clip:padding-box;-moz-background-clip:padding-box;background-clip:padding-box;}a.tag :after{content:"";display:block;position:absolute;top:50%;margin-top:-0.2em;right:-0.2em;background:#eeeeee;border-width:1px;border-style:solid;border-color:#c8c8c8 #eeeeee #bbbbbb #c8c8c8;height:.4em;width:.4em;-webkit-border-radius:50%;-moz-border-radius:50%;border-radius:50%;-webkit-background-clip:padding-box;-moz-background-clip:padding-box;background-clip:padding-box;}
-a.removeTag{border:0;clip:rect(0 0 0 0);height:1px;margin:-1px;overflow:hidden;padding:0;width:1px;font-family:"CabinRegular",Arial,sans-serif;z-index:4;content:"x";display:block;position:absolute;line-height:1em;background:#000000;color:#ffffff;top:-0.6em;left:-0.6em;text-align:center;-webkit-border-radius:50%;-moz-border-radius:50%;border-radius:50%;-webkit-background-clip:padding-box;-moz-background-clip:padding-box;background-clip:padding-box;}
-a.personal{background:#c8c8c8;}
-.no-touch a.personal:hover+a.removeTag,.no-touch a.removeTag:hover{border:1px solid #ffffff;clip:auto;height:1.3em;margin:0;width:1.3em;}
-a.tagCounter{background:url('../img/person.png') no-repeat 0% 47%;padding-left:30px;-webkit-border-radius:0 0.3em 0.3em 0;-moz-border-radius:0 0.3em 0.3em 0;border-radius:0 0.3em 0.3em 0;-webkit-background-clip:padding-box;-moz-background-clip:padding-box;background-clip:padding-box;-webkit-transition:margin-left 0.2s ease-out;-moz-transition:margin-left 0.2s ease-out;-o-transition:margin-left 0.2s ease-out;transition:margin-left 0.2s ease-out;padding:.05em .6em .05em 1.6em;background-color:#000000;border:1px solid #000000;border-width:1px;border-style:solid;border-color:#726659 #726659 #64594e #8f806f;color:#ffffff;}
-.no-touch a.tagCounter{margin-left:-2.1em;position:absolute;z-index:1;}
-.no-touch a.tag:hover,.no-touch a.item:hover{z-index:4;}
-.no-touch a.tag:hover~a.tagCounter,.no-touch a.item:hover~a.tagCounter,.no-touch a.tagCounter:hover{margin-left:0em;z-index:3;}
+li.tag,a.tag{-webkit-border-radius:0.3em 0.3em 0.3em 0.3em;-moz-border-radius:0.3em 0.3em 0.3em 0.3em;border-radius:0.3em 0.3em 0.3em 0.3em;-webkit-background-clip:padding-box;-moz-background-clip:padding-box;background-clip:padding-box;}a.tag :after{content:"";display:block;position:absolute;top:50%;margin-top:-0.2em;right:-0.2em;background:#eeeeee;border-width:1px;border-style:solid;border-color:#c8c8c8 #eeeeee #bbbbbb #c8c8c8;height:.4em;width:.4em;-webkit-border-radius:50%;-moz-border-radius:50%;border-radius:50%;-webkit-background-clip:padding-box;-moz-background-clip:padding-box;background-clip:padding-box;}
+a.removeTag{margin-left:5px}
+li.personal,a.personal{background:#8bb8e9}
 form.addTag{width:auto;margin:0;padding:0;line-height:2.5em;}form.addTag fieldset{background:#ffffff;-webkit-border-radius:0.3em;-moz-border-radius:0.3em;border-radius:0.3em;-webkit-background-clip:padding-box;-moz-background-clip:padding-box;background-clip:padding-box;border:1px solid #999999;position:relative;padding:0;margin:0;width:15em;}
 form.addTag input,form.addTag button{border:none;background:transparent;}
 form.addTag input{padding:.2em 8.230769231em .2em .25em;line-height:normal;width:auto;outline:none;border:none;-webkit-box-shadow:none;-moz-box-shadow:none;box-shadow:none;}
@@ -1081,7 +1077,7 @@ form.addTag button{position:absolute;top:0;right:0;line-height:1.5em;padding:.2e
 .no-touch .tagbox ul,.no-touch form.addTag{line-height:1.5em;}
 .no-touch form.addTag fieldset{font-size:.82em;}
 #tagStatus{margin:5px 0 0 0;}
-#newTag{width:8em;height:1.75em;margin:0.3em;}
+#newTag{width:8em;font-size:12px;margin:0.3em;}
 .tagweight1{font-size:100%;}
 .tagweight2{font-size:120%;}
 .tagweight3{font-size:140%;}
